// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Emitter HP With Backspace 1`] = `
Array [
  "Infinitive: to be - long",
  "Eu: ",
  "Eu: s",
  "Eu: so",
  "Eu: sou",
  "Eu: sour",
  "Eu: sourr",
  "Eu: sour",
  "Eu: sou",
  "Correct! [voice]",
  "Eu: ",
  "s",
  "o",
  "u",
  "Press key to continue...",
  "r - repeat the answer",
  "Weekly Statistics:

",
  "Weekly Statistics:

",
]
`;

exports[`Event Emitter HP With Backspace 2`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED",
  "EXERCISE_BODY_PRINTED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "ANSWER_SUBMITED",
  "ANSWER_CHECKED",
  "KEY_PRESSSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;

exports[`Event Emitter Happy Path 1`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED",
  "EXERCISE_BODY_PRINTED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "ANSWER_SUBMITED",
  "ANSWER_CHECKED",
  "KEY_PRESSSED",
  "EXERCISE_NEXT",
  "APP_FINISHED",
]
`;

exports[`Event Emitter Happy Path 2`] = `
Array [
  "Infinitive: to be - long",
  "Eu: ",
  "Eu: s",
  "Eu: so",
  "Eu: sou",
  "Correct! [voice]",
  "Eu: ",
  "s",
  "o",
  "u",
  "Press key to continue...",
  "r - repeat the answer",
  "Weekly Statistics:

",
  "Weekly Statistics:

",
]
`;

exports[`Event Emitter Unhappy Path 1`] = `
Array [
  "APP_STARTED",
  "EXERCISE_STARTED",
  "EXERCISE_DESCRIPTION_PRINTED",
  "EXERCISE_BODY_PRINTED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "KEY_PRESSSED",
  "ANSWER_SUBMITED",
  "ANSWER_CHECKED",
]
`;

exports[`Event Emitter Unhappy Path 2`] = `
Array [
  "Infinitive: to be - long",
  "Eu: ",
  "Eu: s",
  "Eu: so",
  "Eu: sow",
  "Eu: sowr",
  "Eu: sowro",
  "Eu: sowron",
  "Eu: sowrong",
  "Eu: sowronga",
  "Eu: sowrongan",
  "Eu: sowrongans",
  "Eu: sowrongansw",
  "Eu: sowronganswe",
  "Eu: sowronganswer",
  "Wrong! [voice]",
  "Eu: ",
  "s",
  "o",
  "u",
  "Repeat: ",
]
`;
